--- a/styles/upload.css
+++ b/styles/upload.css
@@ -1,13 +1,14 @@
   /* Upload Area */
   .upload-area {
+      margin-left: auto;
+      margin-right: auto;
       width: 100%;
       max-width: 25rem;
-      background-color: var(--clr-white);
+      background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
       box-shadow: 0 10px 60px rgb(218, 229, 255);
       border: 2px solid var(--clr-light-blue);
       border-radius: 24px;
       padding: 2rem 1.875rem 5rem 1.875rem;
-      margin: 0.625rem;
       text-align: center;
   }
 
@@ -56,12 +57,12 @@
 
   .upload-area__tooltip-data {
       position: absolute;
-      top: 50%;
+      bottom: 100%;
       left: 50%;
       transform: translate(-50%, -125%);
       min-width: max-content;
-      background-color: var(--clr-white);
-      color: var(--clr-blue);
+      background-color: white;
+      color: #5B42F3;
       border: 1px solid var(--clr-light-blue);
       padding: 0.625rem 1.25rem;
       font-weight: 500;
@@ -72,7 +73,7 @@
   }
 
   .upload-area__tooltip:hover .upload-area__tooltip-data {
-      opacity: 1;
+      opacity: 100;
       visibility: visible;
   }
 
@@ -85,7 +86,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      border: 2px dashed var(--clr-light-blue);
+      border: 2px dashed white;
       border-radius: 15px;
       margin-top: 2.1875rem;
       cursor: pointer;
@@ -128,8 +129,6 @@
 
   .drop-zoon__preview-image {
       position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       object-fit: contain;
@@ -214,7 +213,7 @@
 
   .uploaded-file__icon {
       font-size: 3.4375rem;
-      color: var(--clr-blue);
+      color: #121212;
   }
 
   .uploaded-file__icon-text {
@@ -224,7 +223,7 @@
       transform: translateX(-50%);
       font-size: 0.9375rem;
       font-weight: 500;
-      color: var(--clr-white);
+      color: white;
   }
 
   .uploaded-file__info {
@@ -252,7 +251,7 @@
 
   .uploaded-file__info::after {
       width: 100%;
-      background-color: var(--clr-blue);
+      background-color: #00DDEB;
   }
 
   /* Progress Animation */
@@ -269,7 +268,7 @@
 
       to {
           width: 100%;
-          background-color: var(--clr-blue);
+          background-color: #00DDEB;
       }
   }
 
