--- a/styles/main.css
+++ b/styles/main.css
@@ -35,3 +35,49 @@ footer {
 #container {
   margin-top: 4em;
 }
+
+#trending {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+#trending .gif-item {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+}
+
+#trending .gif-item img {
+  transition: scale 0.2s, opacity 0.2s;
+  opacity: 0.6;
+}
+
+#trending .gif-info {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+  color: #fff;
+  font-size: smaller;
+  font-weight: bold;
+  max-height: 40px;
+  overflow: hidden;
+  text-overflow: ellipsiss;
+}
+
+#trending .gif-item:hover img {
+  scale: 1.2;
+  opacity: 1;
+}
+
+#trending .gif-item:hover .gif-info {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+}
