--- a/styles/upload-button.css
+++ b/styles/upload-button.css
@@ -20,7 +20,9 @@ nav>button {
   touch-action: manipulation;
   white-space: nowrap;
   cursor: pointer;
-  height: 100%;
+  height: 50%;
+  position: absolute;
+  right: 0;
 }
 
 nav>button:active,
