--- a/styles/search.css
+++ b/styles/search.css
@@ -1,44 +1,34 @@
 .search-container {
+  display: block;
   position: absolute;
-  margin-top: 7em;
-  width: 96%;
-  height: 3em;
+  top: 100px;
+  left: 0;
+  right: 0;
 }
 
 input#search {
-  margin: 0 auto;
-  width: 100%;
   height: 45px;
-  padding: 0 20px;
   font-size: 1rem;
-  border: 1px solid #d0cfce;
   outline: none;
+  border: none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 0 20px;
+  width: 100%;
+
   &:focus {
-    border: 1px solid #008abf;
+    outline: 1px solid #008abf;
     transition: 0.35s ease;
     color: #008abf;
-    &::-webkit-input-placeholder {
-      transition: opacity 0.45s ease;
-      opacity: 0;
-    }
-    &::-moz-placeholder {
-      transition: opacity 0.45s ease;
-      opacity: 0;
-    }
-    &:-ms-placeholder {
-      transition: opacity 0.45s ease;
-      opacity: 0;
-    }
   }
 }
 
 .search-icon {
-  position: relative;
-  float: right;
-  width: 75px;
-  height: 75px;
-  top: -62px;
-  right: -45px;
+  position: absolute;
+  width: 46px;
+  height: 46px;
+  top: 0;
+  right: 0;
 }
 
 #search-view h1 {
