--- a/styles/main.css
+++ b/styles/main.css
@@ -134,5 +134,44 @@ h1,
 h2,
 h3,
 h4 {
-  font-size: 1rem;
+  font-size: 1.5rem;
+}
+
+#load-more-button-next {
+  align-items: center;
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  font-size: larger;
+  font-weight: bold;
+  line-height: 0.5em;
+  min-width: 1em;
+  padding: 1em 1.5em;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.gif-detailed {
+  display: flex;
+}
+
+.gif-detailed .poster img {
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.gif-detailed .gif-info {
+  flex: 1;
+  margin-left: 2rem;
+  flex: 1;
+  margin-left: 2rem;
+  background: #111;
+  border-radius: 10px;
+  padding: 2rem;
 }
